--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
   
 
-  <script src="./js/ejercicio01.js"></script>
+  <!-- <script src="./js/ejercicio01.js"></script> -->
+  <script src="./js/ejercicio02.js"></script>
+
 </body>
 </html>
