--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <meta name="description" content="Trabajo Practico 02">
+  <meta name="author" content="Fernando Valdivia">
+  <title>Trabajo Practico 02</title>
 </head>
 <body>
   
